WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214490
[iOS] Crash under WebProcess::handleXPCEndpointMessages
https://bugs.webkit.org/show_bug.cgi?id=214490
Summary
[iOS] Crash under WebProcess::handleXPCEndpointMessages
Per Arne Vollan
Reported
2020-07-17 11:48:39 PDT
According to crash logs, it seems possible that the parent process XPC connection can be null. Add a null check, and also check that the connection XPC object really is an XPC connection object.
Attachments
Patch
(1.61 KB, patch)
2020-07-17 11:51 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(1.60 KB, patch)
2020-07-17 11:57 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-07-17 11:48:59 PDT
rdar://problem/65717136
Per Arne Vollan
Comment 2
2020-07-17 11:51:39 PDT
Created
attachment 404579
[details]
Patch
Chris Dumez
Comment 3
2020-07-17 11:52:20 PDT
Comment on
attachment 404579
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=404579&action=review
> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:177 > + if (xpc_get_type(connection) != XPC_TYPE_CONNECTION)
I think this should be an assertion.
Per Arne Vollan
Comment 4
2020-07-17 11:57:23 PDT
Created
attachment 404580
[details]
Patch
Per Arne Vollan
Comment 5
2020-07-17 11:57:44 PDT
(In reply to Chris Dumez from
comment #3
)
> Comment on
attachment 404579
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=404579&action=review
> > > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:177 > > + if (xpc_get_type(connection) != XPC_TYPE_CONNECTION) > > I think this should be an assertion.
Fixed. Thanks for reviewing!
Chris Dumez
Comment 6
2020-07-17 11:58:18 PDT
Comment on
attachment 404580
[details]
Patch r=me
EWS
Comment 7
2020-07-17 12:31:00 PDT
Committed
r264529
: <
https://trac.webkit.org/changeset/264529
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404580
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug