[iOS] Crash under WebProcess::handleXPCEndpointMessages https://bugs.webkit.org/show_bug.cgi?id=214490

Reviewed by Chris Dumez.

According to crash logs, it seems possible that the parent process XPC connection can be null. Add a null check,
and also check that the connection XPC object really is an XPC connection object.

No new tests, since I have not been able to reproduce this issue.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::handleXPCEndpointMessages const):


Canonical link: https://commits.webkit.org/227277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264529 268f45cc-cd09-0410-ab3c-d52691b4dbfc